--- a/src/app/Components/l1/l1.component.less
+++ b/src/app/Components/l1/l1.component.less
@@ -149,16 +149,16 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
-  background: #9053c7;
-  background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
+  background: #61174e;
+/*   background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
   background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  background: linear-gradient(-135deg, #c850c0, #4158d0); */
 }
 
 .wrap-login100 {
   width: 900px;
-  background: #fff;
+  background:rgb(241, 217, 239);
   border-radius: 10px;
   overflow: hidden;
 
@@ -178,7 +178,7 @@ iframe {
 }
 .x
 {
-	font-family:sans-serif;
+	font-family:cursive;
 	text-align:center;
 }
 
