--- a/src/app/Components/cart1/cart1.component.html
+++ b/src/app/Components/cart1/cart1.component.html
@@ -4,7 +4,7 @@
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <!------ Include the above in your HEAD tag ---------->
 <div class="container">
-   <p align:center>shopping cart</p>
+ 
   <div class="row">
 
     <div class="col-sm-12 col-md-10 col-md-offset-1">
@@ -21,13 +21,20 @@
         <tbody>
           <tr>
             <td class="col-sm-8 col-md-6">
-              <div class="media">
+              <!-- <div class="media">
                 <a class="thumbnail pull-left" href="#"> <img class="media-object" src="assets/earphones.jpg" style="width: 72px; height: 72px;"> </a>
                 <div class="media-body">
                   <h4 class="media-heading"><a href="#">Product name</a></h4>
                   <h5 class="media-heading"> by <a href="#">Brand name</a></h5>
                   
-                </div>
+                </div> -->
+                <div class="media" *ngFor="let y of cartdetails">
+                  <a class="thumbnail pull-left" href="#"> <img class="media-object" src="assets\img\{{y.image}}" style="width: 72px; height: 72px;"> </a>
+                  <div class="media-body">
+                    <h4 class="media-heading"><a href="#">{{y.pname}}</a></h4>
+                    <h5 class="media-heading"> by <a href="#">{{y.price}}</a></h5>
+                    
+                  </div> 
               </div>
             </td>
             <td class="col-sm-1 col-md-1" style="text-align: center">
@@ -44,10 +51,10 @@
           <tr>
             <td class="col-md-6">
               <div class="media">
-                <a class="thumbnail pull-left" href="#"> <img class="media-object" src="assets/shirt.png" style="width: 72px; height: 72px;"> </a>
+                <a class="thumbnail pull-left" href="#"> <img class="media-object" src="assets\img\{{obj.image}}" style="width: 72px; height: 72px;"> </a>
                 <div class="media-body">
-                  <h4 class="media-heading"><a href="#">Product name</a></h4>
-                  <h5 class="media-heading"> by <a href="#">Brand name</a></h5>
+                  <h4 class="media-heading"><a href="#">{{obj.pname}}</a></h4>
+                 
                
                 </div>
               </div>
@@ -55,7 +62,7 @@
             <td class="col-md-1" style="text-align: center">
               <input type="email" class="form-control" id="exampleInputEmail1" value="2">
             </td>
-            <td class="col-md-1 text-center"><strong>Rs.4.99</strong></td>
+            <td class="col-md-1 text-center"><strong>{{obj.price}}</strong></td>
             <td class="col-md-1 text-center"><strong>Rs.9.98</strong></td>
             <td class="col-md-1">
               <button type="button" class="btn btn-danger">
@@ -104,4 +111,3 @@
     </div>
   </div>
 </div>
-
