--- a/src/app/Components/l1/l1.component.html
+++ b/src/app/Components/l1/l1.component.html
@@ -5,7 +5,7 @@
   <div class="row">
   
   
-  <div class="col" style="font-size: 75px; font-weight: bold; color:azure;text-align: center;">
+  <div class="col" style="font-size: 75px; font-weight:bolder;font-family: cursive;font-style: italic; color:black;text-align: center;">
     <p>Welcome Browse & Shop </p>
    </div> 
   </div>
@@ -14,7 +14,7 @@
   
             <div class="login100-pic js-tilt mt-3" data-tilt>
   
-                <img src="assets\images\login-logo.png" alt="IMG">
+                <img src="assets\img\LoginLogo.png" alt="IMG">
             </div>
             <form class="login100-form validate-form">
                
@@ -24,7 +24,7 @@
                 </span>
   
                 <div class="wrap-input100 validate-input" data-validate = "User Id is required">
-                    <input class="input100" type="text" name="UserID" placeholder="User-ID">
+                    <input class="input100" type="text"  placeholder="User-ID" [(ngModel)]="obj1.emailid" name="emailid">
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="fa fa-id-card-o" aria-hidden="true"></i>
@@ -32,7 +32,7 @@
                 </div>
   
                 <div class="wrap-input100 validate-input" data-validate = "Password is required">
-                    <input class="input100" type="password" name="pass" placeholder="Password">
+                    <input class="input100" type="password" placeholder="Password" [(ngModel)]="obj1.password" name="password" >
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="fa fa-lock" aria-hidden="true"></i>
@@ -40,14 +40,14 @@
                 </div>
   
                 <div class="container-login100-form-btn">
-                    <button (click)='reg()' class="login100-form-btn">
+                    <button (click)="Login()" class="login100-form-btn" >
                         Login
                     </button>
                 </div>
-  
+                <p>{{event}}</p>
                 <div class="text-center p-t-12">
                   <button >Forgot Password?</button> 
-                  <button type="button" style.display='block' style="width:auto" routerLink='/reg'>Sign Up</button>
+                  <span style.display='block' style="width:auto" routerLink='/reg'>Sign Up</span>
                 </div>
             </form>
         </div>
