--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
-<!-- sliding -->
 <html>
+
+
 <head>
     <style>
     * {
@@ -12,7 +13,7 @@
         width: 16.5%;
         padding: 9px;
         height: 320px; /* Should be removed. Only for demonstration */
-       background-color:rgb(245, 242, 231);
+       background-color:rgb(253, 226, 221);
        border: 2px solid rgb(77, 20, 3);
        padding: 2px;
       }
@@ -22,6 +23,7 @@
         content: "";
         display: table;
         clear: both;
+      
       }
       div.desc {
       padding: 10px;
@@ -57,40 +59,20 @@
 </head>
     <body>
   
-<!-- <style>
-.mySlides {display:none;
- padding-left:125px;
- padding-right:50px;}
-</style>
-</head>-->
-<app-navigation></app-navigation>
-<div class="container" style="max-width:1000px;">
-  <img class="mySlides" src="assets\img\slide6.jpg" style="width:1350px;height:400px;margin-top:60px;">
-  <!-- <img class="mySlides" src="assets\img\slide2.jpg" style="width:100%">
-  <img class="mySlides" src="assets\img\slide3.jpg" style="width:100%">  -->
-</div>
- 
-<!--  <script>
-var myIndex = 0;
-carousel();
 
-function carousel() {
-  var i;
-  var x = document.getElementsByClassName("mySlides");
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";  
-  }
-  myIndex++;
-  if (myIndex > x.length) {myIndex = 1}   
-  x[myIndex-1].style.display = "block";  
-  setTimeout(carousel, 2000); // Change image every 2 seconds
-} 
-</script>-->
- 
+<app-navigation></app-navigation>
+<div class="fling-minislide">
+  <img src="assets\img\slide6.jpg" alt="Slide 1" />
+  <img src="assets\img\jjj.jpg" alt="Slide 2" />
+  <img src="assets\img\slide7.jpg" alt="Slide 3" /> 
+  <img src="assets\img\slide8.jpg" alt="Slide 4" />
+</div>
+
+
 
 <!-- Deals of the day -->
 
- <h3 style="font-style:oblique;font-weight: bold;font-size:30px;">Deals of the day</h3>
+ <h3 style="font-style:oblique;font-weight: bold;font-size:40px;">Deals of the day</h3>
  <div class="row">
     <div class="column">
      <img src="assets\img\top2.jpg" >
@@ -152,7 +134,6 @@ function carousel() {
          <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >
       </div>
   </div>
-  <p>{{stat}}</p>
-</body>
+ </body>
 <app-footer></app-footer>
 </html>
