--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,7 +61,7 @@
   
 
 <app-navigation></app-navigation>
-<div class="fling-minislide">
+<div class="fling-minislide" >  
   <img src="assets\img\slide6.jpg" alt="Slide 1" />
   <img src="assets\img\jjj.jpg" alt="Slide 2" />
   <img src="assets\img\slide7.jpg" alt="Slide 3" /> 
@@ -71,9 +71,10 @@
 
 
 <!-- Deals of the day -->
-
+<div>
  <h3 style="font-style:oblique;font-weight: bold;font-size:40px;">Deals of the day</h3>
- <div class="row">
+</div>
+ <div class="row" style="padding-bottom: 2%;">
     <div class="column">
      <img src="assets\img\top2.jpg" >
      <div class="desc">
