--- a/src/app/Components/cart1/cart1.component.html
+++ b/src/app/Components/cart1/cart1.component.html
@@ -1,8 +1,8 @@
-<app-navigation></app-navigation>
+<!-- <app-navigation></app-navigation>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+<---- Include the above in your HEAD tag 
 <div class="container">
  
   <div class="row">
@@ -21,13 +21,13 @@
         <tbody>
           <tr>
             <td class="col-sm-8 col-md-6">
-              <!-- <div class="media">
+               <div class="media">
                 <a class="thumbnail pull-left" href="#"> <img class="media-object" src="assets/earphones.jpg" style="width: 72px; height: 72px;"> </a>
                 <div class="media-body">
                   <h4 class="media-heading"><a href="#">Product name</a></h4>
                   <h5 class="media-heading"> by <a href="#">Brand name</a></h5>
                   
-                </div> -->
+                </div> 
                 <div class="media" *ngFor="let y of cartdetails">
                   <a class="thumbnail pull-left" href="#"> <img class="media-object" src="assets\img\{{y.image}}" style="width: 72px; height: 72px;"> </a>
                   <div class="media-body">
@@ -102,6 +102,113 @@
             </td>
             <td>
               <button type="button" class="btn btn-success"   routerLink='/cart2'>
+                Checkout <span class="glyphicon glyphicon-play"></span>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div> -->
+
+<app-navigation></app-navigation>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+<div class="container">
+ 
+  <div class="row">
+
+    <div class="col-sm-12 col-md-10 col-md-offset-1">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Product</th>
+            <th>Name </th>
+            <th>Quantity</th>
+            <th class="text-center">Price</th>
+            <!-- <th class="text-center">Total</th> -->
+            <th> </th>
+          </tr>
+        </thead>
+        <tbody>
+ <!--          <tr>
+            <td class="col-sm-8 col-md-6">
+              <!-- <div class="media">
+                <a class="thumbnail pull-left" href="#"> <img class="media-object" src="assets/earphones.jpg" style="width: 72px; height: 72px;"> </a>
+                <div class="media-body">
+                  <h4 class="media-heading"><a href="#">Product name</a></h4>
+                  <h5 class="media-heading"> by <a href="#">Brand name</a></h5>
+                  
+                </div> 
+                <div class="media" *ngFor="let y of cartdetails">
+                  <a class="thumbnail pull-left" href="#"> <img class="media-object" src="assets\img\{{y.image}}" style="width: 72px; height: 72px;"> </a>
+                  <div class="media-body">
+                    <h4 class="media-heading"><a href="#">{{y.pname}}</a></h4>
+                    <h5 class="media-heading"> by <a href="#">{{y.price}}</a></h5>
+                    
+                  </div> 
+              </div>
+            </td>
+            <td class="col-sm-1 col-md-1" style="text-align: center">
+              <input type="email" class="form-control" id="exampleInputEmail1" value="3">
+            </td> -->
+           <!--  <td class="col-sm-1 col-md-1 text-center"><strong>Rs.4.87</strong></td>
+            <td class="col-sm-1 col-md-1 text-center"><strong>Rs.14.61</strong></td>
+            <td class="col-sm-1 col-md-1">
+              <button type="button" class="btn btn-danger">
+                <span class="glyphicon glyphicon-remove"></span> Remove
+              </button>
+            </td> 
+          </tr> -->
+          <tr>
+            
+            <td class="col-md-6" >
+
+              <div class="media" >
+                 <a class="thumbnail pull-left" href="#"><input type="text" [(ngModel)]='obj.image'></a> 
+                <div class="media-body">
+                  <!-- <h4 class="col-md-1" style="text-align: center"><input type="text" [(ngModel)]='obj.pname'><a href="#"></a></h4>
+                  -->
+               
+                </div>
+              </div>
+            </td>
+            <td class="col-md-1" style="text-align: center"><input type="text" [(ngModel)]='obj.pname'><strong></strong></td>
+            <td class="col-md-1" style="text-align: center"><input type="text" [(ngModel)]='obj.quantity'><strong></strong></td>
+            <!-- <td class="col-md-1" style="text-align: center"><input type="text" [(ngModel)]='obj.price'><strong></strong></td> -->
+          
+     
+            <td class="col-md-1 text-center"><input type="text" [(ngModel)]='obj.price'><strong></strong></td>
+            <!-- <td class="col-md-1 text-center"><<input type="text" [(ngModel)]='obj.price *obj.quantity'>-<strong>{{obj.price *obj.quantity}}</strong></td> -->
+             <td class="col-md-1">
+              <button type="submit" class="btn btn-danger" (click)="cm()">
+                <span class="glyphicon glyphicon-remove"></span> ok
+              </button>
+            </td> 
+          
+          </tr>
+
+          <tr>
+            <td>   </td>
+            <td>   </td>
+            <td>   </td>
+            <td><h3>Total</h3></td>
+            <td class="text-right"><h3><strong>{{obj.price * obj.quantity}}</strong></h3></td>
+          </tr>
+          <tr>
+            <td>   </td>
+            <td>   </td>
+            <td>   </td>
+            <td>
+              <button type="button" class="btn btn-default" routerLink='/home'>
+                <span class="glyphicon glyphicon-shopping-cart"  ></span> Continue Shopping
+              </button>
+            </td>
+            <td>
+              <button type="button" class="btn btn-success" routerLink='/cart2'>
                 Checkout <span class="glyphicon glyphicon-play"></span>
               </button>
             </td>
