--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -1,4 +1,4 @@
-.fling-minislide {width:100%; height:0px; padding-bottom: 50%; overflow:hidden; position:relative; padding-top: 1%;}
+.fling-minislide {width:100%;  padding-bottom: 50%; overflow:hidden; position:relative; padding-top: 1%;}
 .fling-minislide img{ position:absolute; animation:fling-minislide 20s infinite; opacity:0; width: 100%; height: 55%;}
 
 @keyframes fling-minislide {25%{opacity:1;} 40%{opacity:0;}}
