--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -76,18 +76,18 @@
 </div>
  <div class="row" style="padding-bottom: 2%;">
     <div class="column">
-     <img src="assets\img\top2.jpg" >
+     <img src="assets\img\top2.jpg"  routerLink="/Clothing">
      <div class="desc">
       <p> TOP </p>
         Price: <del> Rs 658</del><span> Rs 525</span> 
         </div>
         <input type="number" id="quantity" name="quantity" min="1" max="5" >
-        <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >   
+        <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink="/Clothing" >   
     </div>
     <div class="column" >
-      <img src="assets\img\Realme.jpg" >
+      <img src="assets\img\Realme.jpg" routerLink="/Accessories" >
       <div class="desc">
-          <p> WATCH</p>
+          <p> Realme</p>
          <del>Price: Rs 2999</del> <span>  Rs 2600</span>
          
         </div> 
@@ -95,7 +95,7 @@
       <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
     </div>
     <div class="column" >
-        <img src="assets\img\boAt Rockerz 255.jpg" >
+        <img src="assets\img\boAt Rockerz 255.jpg"   routerLink="/Accessories">
         <div class="desc">
             <p> boAt Rockerz </p>
            <del>Price: Rs 1577</del> <span> Rs 1200</span>
@@ -105,7 +105,7 @@
         <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
     </div>
     <div class="column" >
-        <img src="assets\img\jeans2.jpg" >
+        <img src="assets\img\jeans2.jpg"   routerLink="/Clothing">
         <div class="desc">
             <p> JEANS </p>
            <del>Price: Rs 563</del> <span> Rs 480</span>
@@ -115,7 +115,7 @@
         <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
     </div>
     <div class="column" >
-        <img src="assets\img\Moto one fusion plus.jpg" >
+        <img src="assets\img\Moto one fusion plus.jpg"   routerLink="/Electronics">
         <div class="desc">
          <p> MOTO ONE FUSION PLUS</p>
             <del>Price: Rs 17999</del> <span> Rs 15000 </span>
@@ -125,7 +125,7 @@
         <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
       </div>
       <div class="column" >
-        <img src="assets\img\Samsung.jpg" >
+        <img src="assets\img\Samsung.jpg"  routerLink="/Electronics" >
         <div class="desc">
             <p>Samsung watch</p>
             <del>Price: Rs 20000</del> <span> Rs 18000</span>
