--- a/src/app/orderlist/orderlist.component.html
+++ b/src/app/orderlist/orderlist.component.html
@@ -88,7 +88,7 @@
 				<p>{{obj1.price}}</p>
 					
 				
-				<a href="#home">Go to Home</a>
+				<a href="Home">Go to Home</a>
 			 </div>
 			 
 		  </div>
