--- a/src/app/Components/cart2/cart2.component.html
+++ b/src/app/Components/cart2/cart2.component.html
@@ -18,18 +18,18 @@
           <div class="col-50">
             <h3>Billing Address</h3>
             <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="John M. Doe" [(ngModel)]="obj1.fullname" >
+            <input type="text" id="fname" name="firstname" placeholder="your fullname" [(ngModel)]="obj1.fullname" >
             <label for="email"><i class="fa fa-envelope"></i> Email</label>
-            <input type="text" id="email" name="email" placeholder="john@example.com" [(ngModel)]="obj1.email">
+            <input type="text" id="email" name="email" placeholder="your email" [(ngModel)]="obj1.email">
             <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-            <input type="text" id="adr" name="address" placeholder="542 W. 15th Street" [(ngModel)]="obj1.address">
+            <input type="text" id="adr" name="address" placeholder=" your address" [(ngModel)]="obj1.address">
             <label for="city"><i class="fa fa-institution"></i> City</label>
-            <input type="text" id="city" name="city" placeholder="New York" [(ngModel)]="obj1.city">
+            <input type="text" id="city" name="city" placeholder="your city" [(ngModel)]="obj1.city">
 
             <div class="row">
               <div class="col-50">
                 <label for="state">State</label>
-                <input type="text" id="state" name="state" placeholder="NY" [(ngModel)]="obj1.state">
+                <input type="text" id="state" name="state" placeholder="your state" [(ngModel)]="obj1.state">
               </div>
               <div class="col-50">
                 <label for="zip">Zip</label>
@@ -48,26 +48,26 @@
               <i class="fa fa-cc-discover" style="color:orange;"></i>
             </div>
             <label for="cname">Name on Card</label>
-            <input type="text" id="cname" name="cardname" placeholder="John More Doe" [(ngModel)]="obj1.nameoncard">
+            <input type="text" id="cname" name="cardname" placeholder="your name on card" [(ngModel)]="obj1.nameoncard">
             <label for="ccnum">Credit card number</label>
             <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444" [(ngModel)]="obj1.creditcardno">
             <label for="expmonth">Exp Month</label>
-            <input type="text" id="expmonth" name="expmonth" placeholder="September" [(ngModel)]="obj1.expirymonth">
+            <input type="text" id="expmonth" name="expmonth" placeholder="month" [(ngModel)]="obj1.expirymonth">
             <div class="row">
               <div class="col-50">
                 <label for="expyear">Exp Year</label>
-                <input type="text" id="expyear" name="expyear" placeholder="2018" [(ngModel)]="obj1.expiryyear">
+                <input type="text" id="expyear" name="expyear" placeholder="xxxx" [(ngModel)]="obj1.expiryyear">
               </div>
               <div class="col-50">
                 <label for="cvv">CVV</label>
-                <input type="text" id="cvv" name="cvv" placeholder="352" [(ngModel)]="obj1.cvv">
+                <input type="text" id="cvv" name="cvv" placeholder="000" [(ngModel)]="obj1.cvv">
               </div>
             </div>
           </div>
           
         </div>
        
-        <input type="submit" value="Confirm Order" class="btn" (click)="cmsg()" >
+        <input type="submit" value="Confirm Order" class="btn" (click)="cmsg()"  routerLink="/olist" >
       </form>
     </div>
   </div>
