--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,59 +80,47 @@
      <div class="desc">
       <p> TOP </p>
         Price: <del> Rs 658</del><span> Rs 525</span> 
-        </div>
-        <input type="number" id="quantity" name="quantity" min="1" max="5" >
-        <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" routerLink="/Clothing" >   
+    </div>
     </div>
     <div class="column" >
       <img src="assets\img\Realme.jpg" routerLink="/Accessories" >
       <div class="desc">
           <p> Realme</p>
-         <del>Price: Rs 2999</del> <span>  Rs 2600</span>
+          Price:  <del> Rs 2999</del> <span>  Rs 2600</span>
          
         </div> 
-        <input type="number" id="quantity" name="quantity" min="1" max="5" >
-      <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
     </div>
     <div class="column" >
         <img src="assets\img\boAt Rockerz 255.jpg"   routerLink="/Accessories">
         <div class="desc">
             <p> boAt Rockerz </p>
-           <del>Price: Rs 1577</del> <span> Rs 1200</span>
+            Price:<del> Rs 1577</del> <span> Rs 1200</span>
         
            </div> 
-           <input type="number" id="quantity" name="quantity" min="1" max="5" >
-        <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
     </div>
     <div class="column" >
         <img src="assets\img\jeans2.jpg"   routerLink="/Clothing">
         <div class="desc">
             <p> JEANS </p>
-           <del>Price: Rs 563</del> <span> Rs 480</span>
+            Price: <del> Rs 563</del> <span> Rs 480</span>
            
            </div> 
-           <input type="number" id="quantity" name="quantity" min="1" max="5" >
-        <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
     </div>
     <div class="column" >
         <img src="assets\img\Moto one fusion plus.jpg"   routerLink="/Electronics">
         <div class="desc">
          <p> MOTO ONE FUSION PLUS</p>
-            <del>Price: Rs 17999</del> <span> Rs 15000 </span>
+         Price:  <del>Rs 17999</del> <span> Rs 15000 </span>
            
            </div> 
-           <input type="number" id="quantity" name="quantity" min="1" max="5" >
-        <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()"> 
       </div>
       <div class="column" >
         <img src="assets\img\Samsung.jpg"  routerLink="/Electronics" >
         <div class="desc">
             <p>Samsung watch</p>
-            <del>Price: Rs 20000</del> <span> Rs 18000</span>
+            Price: <del> Rs 20000</del> <span> Rs 18000</span>
            
             </div> 
-            <input type="number" id="quantity" name="quantity" min="1" max="5" >
-         <img id="cart" src="assets\img\cart_icon.png" (click)="addtocart()" >
       </div>
   </div>
  </body>
