--- a/src/app/Components/Shared/navigation/navigation.component.html
+++ b/src/app/Components/Shared/navigation/navigation.component.html
@@ -7,6 +7,7 @@ ul {
   margin:0;
   padding: 7px;
   overflow:visible;
+  background-color: rgb(247, 189, 178);
 }
      
 li {
@@ -32,7 +33,7 @@ li /* a {
 }
 
 a:hover, a:active {
-   background-color:white; 
+   background-color:rgb(243, 217, 217); 
 }
 
 .dropdown {
